--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -31,7 +31,7 @@ h1 {
 
 
 body {
-	font-family: Futura, sans-serif;
+	font-family: Futura Light, sans-serif;
 	font-size: 20px;
 	color: #222222;
 	line-height: 1.3;
