--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -50,10 +50,11 @@ a {
 }
 
 nav a {
-	color: #cccccc;
+	color: white;
 	background-color: green;
 	font-variant: small-caps; 
 	margin-right: 10px;
+	padding: 10px;
 	text-align: right;
 
 }
