--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -53,6 +53,7 @@ nav a {
 	color: white;
 	background-color: green;
 	font-variant: small-caps; 
+	letter-spacing: .25em;
 	margin-right: 10px;
 	padding: 10px;
 	text-align: right;
