--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -24,7 +24,7 @@ h1 {
 	text-transform: uppercase;
 	text-decoration: none;
 	color: green;
-	border-bottom: 1px green, solid;
+	border-bottom: 1px green solid;
 	padding-bottom: 2px;
 }
 
