--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -16,16 +16,16 @@ header {
 	background-color: #FFED74;
 }
 aside {
-	background-color: #FFC675
+	background-color: #FFC675;
 }
 article {
-	background-color: #E89C6C
+	background-color: #E89C6C;
 }
 footer {
-	#FF957E
+	background-color: #FF957E;
 }
 div/section {
-	background-color: #FFE2B8
+	background-color: #FFE2B8;
 }
 
 h1 {
