--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -18,42 +18,43 @@
 	padding: 40px;
 	margin-left: 60px;
 	color: #0000;
-	text-align: left;
+	text-align: none;
 }
 #two_column {
-	background-color: #ffB7CF;
-	border: 1px black solid;
+	background-color: #ffffff;
 	padding: 20px;
 }
 #left {
-	background-color: violet;
-	border: 1px black solid;
-	padding: 20px;
+	padding: 4em 0em 4em 4em;
 	float: left;
-	width: 40%;
+	width: 50%;
+	text-align: left;
+	margin-right: 2em;
 }
 #right {
-	background-color: pink;
-	border: 1px black solid;
-	padding: 20px;
+	padding: 10em 10em 4em 0em;
 	float: right;
-	width: 40%;
+	width: 30%;
+	text-align: center;
+	line-height: 150%;
+
 }
+hr {width: 60%;margin-left: auto;margin-right: auto;}
 	
 header {
-	background-color: #FFED74;
+	background-color: #ffffff;
 }
 aside {
-	background-color: #FFC675;
+	background-color: #ffffff;
 }
 article {
-	background-color: #E89C6C;
+	background-color: #ffffff;
 }
 footer {
-	background-color: #FF957E;
+	background-color: #ffffff;
 }
 div/section {
-	background-color: #FFE2B8;
+	background-color: #ffffff;
 }
 
 h1 {
@@ -62,12 +63,13 @@ h1 {
 
 .hr3 {
 	font-family: 'Fredericka the Great', cursive;
-	letter-spacing: .1em;
+	letter-spacing: .2em;
 	text-transform: uppercase;
 	text-decoration: none;
-	color: green;
-	border-bottom: 1px green solid;
+	color: #10943c;
+	border-bottom: 2px #10943c;
 	padding-bottom: 2px;
+	font-size: 2em
 }
 
 .hr4 {
@@ -92,20 +94,15 @@ body {
 	line-height: 1.3;
 }
 
-a {
-	color: inherit;
-	text-decoration: none;
-}
 
 nav a {
-	color: white;
-	background-color: #E8C66A;
+	color: black;
 	font-variant: small-caps; 
 	letter-spacing: .25em;
-	margin-right: 10px;
+	margin-right: 40px;
 	padding: 1px;
 	text-align: right;
-
+	text-decoration: none;
 }
 
 img {
@@ -113,6 +110,9 @@ img {
 }
 #lasagna {
 	width: 75%
+}
+footer {
+	text-align: center;
 }
 
 main {
