--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -14,12 +14,6 @@
     height: 0;
 }
 
-.outer {
-	padding: 40px;
-	margin-left: 60px;
-	color: #0000;
-	text-align: none;
-}
 #two_column {
 	background-color: #ffffff;
 	padding: 20px;
@@ -35,30 +29,16 @@
 	padding: 10em 10em 4em 0em;
 	float: right;
 	width: 30%;
-	text-align: center;
+	text-align: left;
 	line-height: 150%;
-
-}
-hr {width: 60%;margin-left: auto;margin-right: auto; color: #10943c;}
-	
-header {
-	background-color: #ffffff;
-}
-aside {
-	background-color: #ffffff;
-}
-article {
-	background-color: #ffffff;
-}
-footer {
-	background-color: #ffffff;
-}
-div/section {
-	background-color: #ffffff;
 }
 
 h1 {
 	font-family: 'Raleway', sans-serif;
+}
+h2 {
+	text-align: center;
+	padding-bottom: 6px;
 }
 
 .hr3 {
@@ -67,8 +47,8 @@ h1 {
 	text-transform: uppercase;
 	text-decoration: none;
 	color: #10943c;
-	border-bottom: 2px #10943c;
-	padding-bottom: 2px;
+	padding: 40px;
+	border: 10px #10943c;
 	font-size: 2em
 }
 
@@ -104,11 +84,23 @@ nav a {
 	padding: 1px;
 	text-align: right;
 	text-decoration: none;
-
 }
-a:hover {
+nav a:hover {
   color: #10943c;
+  font-weight: 1000;
 }
+article a {
+	color: white;
+	font-variant: small-caps; 
+	letter-spacing: .25em;
+	padding: 12px;
+	border: 4px;
+	text-align: center;
+	text-decoration: none;
+	background-color: #10943c;
+}
+
+
 
 img {
 	width: 10%;
