--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -14,34 +14,53 @@
     height: 0;
 }
 
-#two_column {
-	background-color: #ffffff;
-	padding: 20px;
-}
-#left {
+
+.left {
 	padding: 4em 0em 4em 4em;
 	float: left;
-	width: 50%;
-	text-align: left;
-	margin-right: 2em;
-}
-#right {
-	padding: 10em 10em 4em 0em;
-	float: right;
 	width: 30%;
 	text-align: left;
+	margin-right: 2em;
+	margin-left: 50px;
+}
+.right {
+	padding: 5em 5em 4em 0em;
+	float: right;
+	text-align: left;
 	line-height: 150%;
+	margin-top: 30px;
 }
 .whatwedo {
-	text-align: center;
+	text-align: justify;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 80px;
+	margin-top: 80px;
+	width: 40%;
+	display: block;
+	line-height: 25px;
+
 }
 
 h1 {
 	font-family: 'Raleway', sans-serif;
+	margin-top: 70px;
+	margin-left: 20px;
+	float: left;
 }
 h2 {
 	text-align: center;
-	padding-bottom: 6px;
+	margin-bottom: 40px;
+}
+
+ul {
+	text-align: left;
+	margin-left: auto;
+	margin-right: auto;
+	width: 60%;
+	display: block;
+	margin-bottom: 40px;
+	font-size: 18pt;
 }
 
 .hr3 {
@@ -50,9 +69,8 @@ h2 {
 	text-transform: uppercase;
 	text-decoration: none;
 	color: #10943c;
-	padding: 40px;
-	border: 10px #10943c;
-	font-size: 2em
+	margin-left: 115px;
+    font-size: 2em
 }
 
 .hr4 {
@@ -67,6 +85,7 @@ div a {
 	font-variant: small-caps;
 	margin-right: 10px;
 	padding: 2.5px;
+	text-align: center;
 }
 
 
@@ -82,34 +101,40 @@ nav a {
 	float: right;
 	color: black;
 	font-variant: small-caps; 
-	letter-spacing: .25em;
-	margin-right: 40px;
+	letter-spacing: .15em;
+	margin-right: 60px;
 	padding: 1px;
 	text-align: right;
 	text-decoration: none;
+	margin-top: 120px;
 }
 nav a:hover {
-  color: #10943c;
-  font-weight: 1000;
+  color: #F08700;
+  font-weight: bolder;
 }
-article a {
+a.shop {
 	color: white;
 	font-variant: small-caps; 
-	letter-spacing: .25em;
+	letter-spacing:.25em;
 	padding: 12px;
-	border: 4px;
+	border: 8px;
 	text-align: center;
 	text-decoration: none;
 	background-color: #10943c;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 30%;
+	font-weight: bolder;
 }
-
-
+a.shop:hover {
+	color: black;
+	background-color: white;
+}
 
 img {
 	width: 10%;
 }
-#lasagna {
-	width: 75%
 }
 footer {
 	text-align: center;
