--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -18,17 +18,17 @@
 .left {
 	padding: 4em 0em 4em 4em;
 	float: left;
-	width: 30%;
+	width: 40%;
 	text-align: left;
-	margin-right: 2em;
+	margin-right: 0em;
 	margin-left: 50px;
 }
 .right {
-	padding: 5em 5em 4em 0em;
+	padding: 8em 0em 4em 0em;
 	float: right;
 	text-align: left;
 	line-height: 150%;
-	margin-top: 30px;
+	margin-top: 50px;
 }
 .whatwedo {
 	text-align: justify;
@@ -103,13 +103,13 @@ nav a {
 	font-variant: small-caps; 
 	letter-spacing: .15em;
 	margin-right: 60px;
-	padding: 1px;
+	padding: 10px;
 	text-align: right;
 	text-decoration: none;
 	margin-top: 120px;
 }
 nav a:hover {
-  color: #F08700;
+  color: #F09907;
   font-weight: bolder;
 }
 a.shop {
@@ -131,15 +131,32 @@ a.shop:hover {
 	color: black;
 	background-color: white;
 }
-
-img {
-	width: 10%;
-}
-}
-footer {
+.IG {
+	float: right;
+	margin-left: 25px;
+	margin-right: 50px;
+	margin-bottom: 80px;
+	margin-top: 80px;
+	width: 45%;
+	display: block;
 	text-align: center;
 }
+.signup {
+	color: white;
+	padding: 4em 4em 4em 4em;
+	float: left;
+	text-align: center;
+	line-height: 150%;
+	margin-top: 250px;
+	margin-right: 0px;
+	margin-left: 150px;
+	background-color: #F09907;
 
-main {
-	padding: 
 }
+h3 {
+	font-variant: small-caps;
+	padding: 10px 10px 10px 10px;
+}
+img {
+	width: 25%;
+	}
