--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -4,6 +4,7 @@
 * {
 	padding: 0;
 	margin: 0;
+	box-sizing: border-box;
 }
 .clearfix:after {
     visibility: hidden;
@@ -13,34 +14,40 @@
     clear: both;
     height: 0;
 }
-
+body {
+	font-family: 'Raleway', sans-serif;
+	font-size: 20px;
+	color: #222222;
+	line-height: 1.3;
+	max-width: 80em;
+	border: 2px solid;
+	margin: auto;
+}
 
 .left {
-	box-sizing: border-box;
 	float: left;
-	width: 30%;
-	margin-top: 10%;
-	margin-left: 10%;
-	margin-right: 5%; 
+	width: 50%;
 }
 
 .whatwedo {
 	text-align: justify;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 10em;
-	margin-top: 10em;
+	margin-bottom: 10%;
+	margin-top: 15%;
 	width: 40%;
 	display: block;
 	line-height: 25px;
 
 }
+.intro {
+	margin: 10% auto 0;
+}
 
 h1 {
 	font-family: 'Raleway', sans-serif;
-	margin-top: 2em;
-	margin-left: 1em;
 	float: left;
+
 }
 h2 {
 	text-align: center;
@@ -49,13 +56,10 @@ h2 {
 }
 
 ul {
-	margin-bottom: 90px;
-	margin-left: 50px;
+	
 	font-size: 1.25em;
 	padding-left: 1.25em;
-	padding-right: 1.25em;
-	text-align: justify-all;
-	font-size: 92%;
+	
 }
 
 .hr3 {
@@ -64,7 +68,6 @@ ul {
 	text-transform: uppercase;
 	text-decoration: none;
 	color: #10943c;
-	margin-left: 115px;
     font-size: 2em
 }
 
@@ -84,12 +87,7 @@ div a {
 }
 
 
-body {
-	font-family: 'Raleway', sans-serif;
-	font-size: 20px;
-	color: #222222;
-	line-height: 1.3;
-}
+
 
 
 nav a {
