--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -14,6 +14,9 @@
     clear: both;
     height: 0;
 }
+header {
+	padding: 2em 0;
+}
 body {
 	font-family: 'Raleway', sans-serif;
 	font-size: 20px;
@@ -38,7 +41,6 @@ body {
 	width: 40%;
 	display: block;
 	line-height: 25px;
-
 }
 .intro {
 	margin: 10% auto 0;
@@ -47,7 +49,6 @@ body {
 h1 {
 	font-family: 'Raleway', sans-serif;
 	float: left;
-
 }
 h2 {
 	text-align: center;
@@ -56,10 +57,8 @@ h2 {
 }
 
 ul {
-	
 	font-size: 1.25em;
 	padding-left: 1.25em;
-	
 }
 
 .hr3 {
@@ -68,13 +67,11 @@ ul {
 	text-transform: uppercase;
 	text-decoration: none;
 	color: #10943c;
-    font-size: 2em
+    font-size: 2em;
 }
-
 .hr4 {
 	color: black;
 }
-
 .hr5 {
 	color: black;
 }
@@ -82,21 +79,16 @@ div a {
 	color: black;
 	font-variant: small-caps;
 	margin-right: 10px;
-	padding: 2.5px;
+	padding: .1em;
 	text-align: center;
 }
-
-
-
-
-
 nav a {
 	float: right;
 	color: black;
 	font-variant: small-caps; 
 	letter-spacing: .15em;
 	margin-right: 60px;
-	padding: 10px;
+	padding: .5em;
 	text-align: right;
 	text-decoration: none;
 	margin-top: 125px;
@@ -109,7 +101,7 @@ a.shop {
 	color: white;
 	font-variant: small-caps; 
 	letter-spacing:.25em;
-	padding: 12px;
+	padding: .5em;
 	border: 8px;
 	text-align: center;
 	text-decoration: none;
@@ -147,13 +139,25 @@ a.shop:hover {
 	margin-right: 0px;
 	margin-left: 150px;
 	background-color: #F09907;
-
 }
 h3 {
 	font-variant: small-caps;
 	font-size: 100%;
-	padding: 10px 10px 10px 10px;
+	padding: .5em;
 }
 img {
 	width: 25%;
 	}
+html {
+  font-size: 16px;
+}
+@media screen and (min-width: 320px) {
+  html {
+    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
+  }
+}
+@media screen and (min-width: 1000px) {
+  html {
+    font-size: 22px;
+  }
+}
