--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -23,13 +23,15 @@ body {
 	color: #222222;
 	line-height: 1.3;
 	max-width: 80em;
-	border: 2px solid;
+	/*border: 2px solid;*/
 	margin: auto;
 }
 
 .left {
 	float: left;
-	width: 50%;
+	width: 45%;
+	padding: 4em;
+	margin-left: 20px;
 }
 
 .whatwedo {
@@ -53,12 +55,14 @@ h1 {
 h2 {
 	text-align: center;
 	margin-bottom: 40px;
-	margin-top: 80px;
+	margin-top: 20px;
+	margin-left: 40px;
 }
 
 ul {
 	font-size: 1em;
 	padding-left: 1.25em;
+	margin-left: 40px;
 }
 
 .hr3 {
@@ -88,9 +92,9 @@ nav a {
 	font-variant: small-caps; 
 	letter-spacing: .15em;
 	margin-right:0px;
-	padding: .75em;
+	padding: 1em .75em .75em .75em;
 	text-decoration: none;
-	margin-top: 0px;
+	margin-top: 20px;
 }
 nav a:hover {
   color: #F09907;
@@ -157,10 +161,11 @@ html {
 	}
 @media only screen and (max-width: 1040px) {
 	body {
-		font-size: 18px;
+		font-size: 16px;
 	}
 	.left {
-		width: 40%;
+		width: 50%;
+		margin: auto;
 	}
 	h1 {
 		margin-top: 40px;
@@ -169,13 +174,27 @@ html {
 @media only screen and (max-width: 1360px) {
 	.IG {
 		float: none;
+		width: auto;
 	}
 @media only screen and (max-width: 880px) {
 	nav a {
 		float: none;
 		width: auto;
 	}
+
+	h1 {
+		text-align: center;
 	}
+	body {
+		font-size: 18px;
+	}
+@media only screen and (max-width: 480px) {
+	.left {
+		float: none;
+		width: 80%;
+	}
+	}
+}
 }
 }
 
