--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -155,6 +155,10 @@ img {
 html {
   font-size: 16px;
 }
+@media only screen and (min-width: 1800px) {
+	
+	}
+}
 @media only screen and (max-width: 1300px) {
 	nav a {
 		float: none;
